Use ScopedRGBEmulationColorMask inside clearBuffer.

The default back buffer's color attachment is currently RGB(A)8, and
it's legal to use clearBufferfv with it. The emulation done on macOS
of an RGB back buffer on top of an RGBA texture needs to be done in
this entry point. Do it for all of the clearBuffer entry points
(except clearBufferfi, which is only for use with depth/stencil) to
avoid problems later as support for different color spaces is added to
HTMLCanvasElement.

BUG=765729

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I4e7ee1ab1045c8cf606a7d93a2addcd3c0d961b4
Reviewed-on: https://chromium-review.googlesource.com/668238
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502356}
Former-commit-id: af8c8baf31af880915d1b77be138be7c1e82c370